kubernetes/resources/05-tesla/teslamate/grafana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: apps
  labels:
    app: grafana
    env: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
        env: home
    spec:
      volumes:
      - name: grafana-data
        persistentVolumeClaim:
          claimName: grafana
      containers:
      - name: grafana
        image: teslamate/grafana:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-data
          mountPath: /var/lib/grafana
      securityContext:
        runAsUser: 472
        fsGroup: 472
