kubernetes/resources/05-tesla/teslamate/postgresql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: tesla
  labels:
    app: postgresql
    env: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
        env: home
    spec:
      volumes:
      - name: postgresql-data
        persistentVolumeClaim:
          claimName: postgresql
      containers:
      - name: postgresql
        image: postgres:17
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresql-data
          mountPath: /var/lib/postgresql/data
