kubernetes/resources/05-tesla/teslamate/network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate
  namespace: apps
  labels:
    env: home
spec:
  type: ClusterIP
  ports:
  - name: postgresql
    port: 4000
    targetPort: 4000
  selector:
    app: teslamate

---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: apps
  labels:
    env: home
spec:
  type: ClusterIP
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
  selector:
    app: mosquitto

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: apps
  labels:
    env: home
spec:
  type: ClusterIP
  ports:
  - name: grafana
    port: 3000
    targetPort: 3000
  selector:
    app: grafana

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-home
    kubernetes.io/ingress.class: nginx
  labels:
    app: teslamate
    env: home
spec:
  tls:
  - hosts:
    - car.k8s.iaminyourpc.xyz
    secretName: tls-car-k8s-iaminyourpc-xyz
  rules:
  - host: car.k8s.iaminyourpc.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: teslamate
            port:
              number: 4000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-home
    kubernetes.io/ingress.class: nginx
  labels:
    app: grafana
    env: home
spec:
  tls:
  - hosts:
    - grafana.car.k8s.iaminyourpc.xyz
    secretName: tls-grafana-car-k8s-iaminyourpc-xyz
  rules:
  - host: grafana.car.k8s.iaminyourpc.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              number: 3000
